brat/test/golden/error/noovers.brat.golden
Error in test/golden/error/noovers.brat@FC {start = Pos {line = 2, col = 2}, end = Pos {line = 2, col = 8}}:
f(a, b) = []
 ^^^^^^

  Nothing to bind to: b

